--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/search"
         android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
