convert to using codebase viewBinding

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#23272a</color>
     <color name="colorWhite">#fff</color>
+    <color name="colorDark">#000000</color>
 </resources>
