--- a/app/src/main/res/values-night-v31/splash_theme.xml
+++ b/app/src/main/res/values-night-v31/splash_theme.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-<!--    &lt;!&ndash; Splash Screen Theme. &ndash;&gt;-->
+<resources>
+
 <!--    <style name="Theme.AppSplash" parent="Theme.SplashScreen">-->
 <!--        <item name="android:windowSplashScreenBackground">@color/colorBlack</item>-->
-<!--        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_round</item>-->
-<!--        <item name="windowSplashScreenAnimationDuration">300</item>-->
+<!--        <item name="android:windowSplashScreenAnimatedIcon">@drawable/news</item>-->
+<!--        <item name="android:windowSplashScreenAnimationDuration">300</item>-->
 <!--        <item name="postSplashScreenTheme">@style/Theme.SplishSplash</item>-->
 
 <!--        &lt;!&ndash; Status bar and Nav bar configs &ndash;&gt;-->
