--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -38,7 +38,7 @@
         android:layout_height="56dp"
         app:menu="@menu/bottom_navigation_menu"
         app:itemBackground="@color/colorBlack"
-        app:itemIconTint="@color/colorWhite"
+        app:itemIconTint="@drawable/bottom_selector"
         app:itemTextColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
